--- a/code/client/Running_cat1/app/build.gradle
+++ b/code/client/Running_cat1/app/build.gradle
@@ -17,6 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
@@ -29,4 +36,7 @@ dependencies {
     compile files('libs/locSDK_3.1.jar')
     compile files('libs/android-support-v4.jar')
     compile files('libs/baidumapapi_base_v3_6_1.jar')
+    compile files('libs/commons-codec-1.9.jar')
+    compile files('libs/apache/fluent-hc-4.5.2.jar')
+    compile files('libs/commons-logging-1.2.jar')
 }
