--- a/code/client/Running_cat1/app/src/main/AndroidManifest.xml
+++ b/code/client/Running_cat1/app/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="r7yGbDyxGymTIo8ZnTlLSYGo" />
+            android:value="nVkOENQ3KcGEXeC294URgHNAOt2xRAUU" />
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
              App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
@@ -77,12 +77,12 @@
     </application>
 
 
-
-    //添加百度地图权限
-
     <permission android:name="android.permission.BAIDU_LOCATION_SERVICE" />
     - <!--  这个权限用于进行网络定位
   -->
+    <uses-permission android:name="android.permission.BAIDU_LOCATION_SERVICE" >
+    </uses-permission>
+
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     - <!--  这个权限用于访问GPS定位
   -->
